--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -164,11 +164,20 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: rgba(33, 150, 243, 0.9);
   color: #ffffff;
+  font-family: Roboto;
+  font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   opacity: 0;
+}
+
+.conteiner-examples li:hover .text-overlay,
+.conteiner-examples li:focus .text-overlay {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+  opacity: 1;
 }
 
 .content-cart {
@@ -221,12 +230,5 @@
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
-}
-
-.conteiner-examples li:hover .text-overlay,
-.conteiner-examples li:focus .text-overlay {
-  -webkit-transform: translateY(0);
-          transform: translateY(0);
-  opacity: 1;
 }
 /*# sourceMappingURL=portfolio.css.map */
