--- a/sass/components/_arrow.scss
+++ b/sass/components/_arrow.scss
@@ -1,26 +1,26 @@
-.arrow-conteiner {
-  position: fixed;
-  right: 25px;
-  bottom: 25px;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: $secondary-text-color;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  box-shadow: 0px 0px 23px -2px rgba(0, 0, 0, 0.71);
-}
-.arrow-conteiner svg {
-  display: block;
-  width: 40px;
-  height: 40px;
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  fill: $text-white-color;
-}
-.arrow-conteiner:hover {
-  background-color: $activ-color;
-  box-shadow: 0px 0px 23px -2px rgba(33, 150, 243, 0.71);
-}
+// .arrow-conteiner {
+//   position: fixed;
+//   right: 25px;
+//   bottom: 25px;
+//   width: 50px;
+//   height: 50px;
+//   border-radius: 50%;
+//   background-color: $secondary-text-color;
+//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+//   box-shadow: 0px 0px 23px -2px rgba(0, 0, 0, 0.71);
+// }
+// .arrow-conteiner svg {
+//   display: block;
+//   width: 40px;
+//   height: 40px;
+//   position: absolute;
+//   left: 50%;
+//   top: 50%;
+//   transform: translate(-50%, -50%);
+//   fill: $text-white-color;
+// }
+// .arrow-conteiner:hover {
+//   background-color: $activ-color;
+//   box-shadow: 0px 0px 23px -2px rgba(33, 150, 243, 0.71);
+// }
