--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,26 +1,34 @@
 .client-section {
   background-color: $text-white-color;
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .conteiner-client {
-  width: 1170px;
-  margin-left: auto;
-  margin-right: auto;
+  margin: -15px;
 }
 .client-section ul {
   display: flex;
+  flex-wrap: wrap;
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
 .client-item {
-  width: 170px;
+//   width: calc((100%-4 * 30px)/2);
+width: 210px;
+  margin: 15px;
   height: 90px;
   border: 1px solid #afb1b8;
   color: #afb1b8;
   border-radius: 4px;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    border-color: $activ-color;
+    color: $activ-color;
+  }
 }
 .client-item a {
   display: block;
@@ -35,23 +43,10 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
-.client-item:not(:first-child) {
-  margin-left: 30px;
-}
 .client-title {
-  margin-top: 0;
-  margin-bottom: 50px;
+  margin: 0;
   color: $primary-text-color;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  @include main-font(bold, 28px, 1.17);
   text-align: center;
   letter-spacing: 0.03em;
-}
-.client-item:hover,
-.client-item:focus {
-  border-color: $activ-color;
-  color: $activ-color;
 }
