--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -59,11 +59,7 @@
 }
 .form-modal b {
   margin-bottom: 30px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 20px;
-  line-height: 23px;
+  @include main-font(bold, 20px, 1.15);
   text-align: center;
   letter-spacing: 0.03em;
   color: $primary-text-color;
@@ -93,11 +89,7 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 1.87;
+  @include main-font(bold, 16px, 1.87);
   text-align: center;
   letter-spacing: 0.06em;
   color: $text-white-color;
@@ -129,11 +121,7 @@
   position: absolute;
   left: 42px;
   top: 12px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 16px;
+  @include main-font(normal, 14px, 1.14);
   letter-spacing: 0.01em;
   color: $secondary-text-color;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -153,11 +141,7 @@
   top: -17px;
   left: 16px;
   color: $activ-color;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 1.17;
+  @include main-font(normal, 12px, 1.17);
   letter-spacing: 0.01em;
 }
 .input-field:focus {
@@ -169,11 +153,7 @@
 }
 .checkbox-label {
   padding-left: 23px;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 1.71;
+  @include main-font(normal, 14px, 1.71);
   letter-spacing: 0.03em;
   user-select: none;
 }
