--- a/sass/components/_portfolio-examples.scss
+++ b/sass/components/_portfolio-examples.scss
@@ -39,11 +39,7 @@
   border: 1px solid #f5f4fa;
   background: #f5f4fa;
   color: $primary-text-color;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
+  @include main-font(500, 16px, 1.62);
   text-align: center;
   letter-spacing: 0.03em;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -84,7 +80,7 @@
 }
 .image-cart {
   position: relative;
-    overflow: hidden;
+  overflow: hidden;
 }
 .text-overlay {
   position: absolute;
@@ -100,11 +96,14 @@
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background-color: rgba(33, 150, 243, 0.9);
   color: $text-white-color;
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 1.56;
+  @include main-font(normal, 18px, 1.56);
   letter-spacing: 0.03em;
   opacity: 0;
+  .conteiner-examples li:hover &,
+  .conteiner-examples li:focus & {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 .content-cart {
   padding: 20px 24px;
@@ -121,35 +120,23 @@
 .conteiner-examples li {
   width: 370px;
   margin: 15px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);;
-  &:hover,&:focus {
-  box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    0px 1px 1px rgba(0, 0, 0, 0.12);
-}
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      0px 1px 1px rgba(0, 0, 0, 0.12);
+  }
 }
 .examples-works h2 {
   margin: 0;
   margin-bottom: 4px;
   color: $primary-text-color;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
+  @include main-font(700, 18px, 2);
   letter-spacing: 0.03em;
 }
 .content-cart p {
   margin: 0;
   color: $secondary-text-color;
-  font-family: Roboto;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 1.87;
+  @include main-font(normal, 16px, 1.87);
   letter-spacing: 0.03em;
-}
-.conteiner-examples li:hover .text-overlay,
-.conteiner-examples li:focus .text-overlay {
-  transform: translateY(0);
-  opacity: 1;
 }
