--- a/css/main.css
+++ b/css/main.css
@@ -523,69 +523,16 @@ a {
 }
 
 .client-section {
-  background-color: #ffffff;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-
-.conteiner-client {
-  margin: -15px;
-}
-
-.client-section ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.client-item {
-  width: 210px;
-  margin: 15px;
-  height: 90px;
-  border: 1px solid #afb1b8;
-  color: #afb1b8;
-  border-radius: 4px;
-  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.client-item:hover, .client-item:focus {
-  border-color: #2196f3;
-  color: #2196f3;
-}
-
-.client-item a {
-  display: block;
-  width: inherit;
-  height: inherit;
-  color: currentColor;
-}
-
-.client-item svg {
-  fill: currentColor;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  padding: 60px 15px;
 }
 
 .client-title {
+  text-align: center;
   margin: 0;
-  color: #212121;
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
-  font-size: 28px;
+  font-size: 28;
   line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
 }
 /*# sourceMappingURL=main.css.map */
