--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,52 +1,10 @@
 .client-section {
-  background-color: $text-white-color;
-  padding-top: 60px;
-  padding-bottom: 60px;
-  padding-left: 15px;
-  padding-right: 15px;
-}
-.conteiner-client {
-  margin: -15px;
-}
-.client-section ul {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-.client-item {
-//   width: calc((100%-4 * 30px)/2);
-width: 210px;
-  margin: 15px;
-  height: 90px;
-  border: 1px solid #afb1b8;
-  color: #afb1b8;
-  border-radius: 4px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  &:hover,
-  &:focus {
-    border-color: $activ-color;
-    color: $activ-color;
-  }
-}
-.client-item a {
-  display: block;
-  width: inherit;
-  height: inherit;
-  color: currentColor;
-}
-.client-item svg {
-  fill: currentColor;
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  padding: 60px 15px;
 }
 .client-title {
-  margin: 0;
-  color: $primary-text-color;
-  @include main-font(bold, 28px, 1.17);
   text-align: center;
-  letter-spacing: 0.03em;
+  margin: 0;
+  @include main-font(bold, 28, 1.17);
+}
+.client-section ul {
 }
