--- a/css/main.css
+++ b/css/main.css
@@ -97,6 +97,9 @@ a {
   left: 0;
   width: 100%;
   height: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 93px;
   background-color: rgba(0, 0, 0, 0.2);
   -webkit-transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -108,12 +111,7 @@ a {
 }
 
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  width: 528px;
+  position: relative;
   padding: 40px;
   background-color: #ffffff;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -529,10 +527,236 @@ a {
 .client-title {
   text-align: center;
   margin: 0;
+  margin-bottom: 30px;
   font-family: Roboto;
   font-style: normal;
   font-weight: bold;
   font-size: 28;
   line-height: 1.17;
+}
+
+.client-section ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  padding: 0;
+  margin: -15px;
+  list-style: none;
+}
+
+.client-item {
+  -ms-flex-preferred-size: calc(((100%-30px) - 4 * 15px) / 2);
+      flex-basis: calc(((100%-30px) - 4 * 15px) / 2);
+  margin: 15px;
+  height: 90px;
+  color: #afb1b8;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.client-item:focus, .client-item:hover {
+  border-color: #2196f3;
+  color: #2196f3;
+}
+
+.client-item a {
+  display: block;
+  height: inherit;
+  color: inherit;
+}
+
+.client-item svg {
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  fill: currentColor;
+}
+
+footer {
+  background-color: #2f303a;
+  padding: 60px 15px;
+}
+
+footer a {
+  color: #ffffff;
+}
+
+.logo-footer {
+  display: block;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #ffffff;
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+}
+
+.logo-footer-web {
+  color: #2196f3;
+}
+
+.conteiner-logo ul {
+  list-style: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 15px;
+  line-height: 1.71;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  padding: 0;
+  margin: 0;
+}
+
+.address-list {
+  font-style: normal;
+  margin-bottom: 8px;
+}
+
+.footer-mail-link {
+  display: block;
+  color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 8px;
+}
+
+.footer-tell-link {
+  display: block;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.conteiner-join {
+  display: block;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.conteiner-join b {
+  display: block;
+  margin-bottom: 20px;
+  text-align: center;
+  color: #ffffff;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+
+.conteiner-join ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.item-social a {
+  display: block;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.item-social svg {
+  width: 20px;
+  height: 20px;
+  display: block;
+  fill: #ffffff;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.conteiner-join .item-social:not(:first-child) {
+  margin-left: 10px;
+}
+
+.item-social a:hover,
+.item-social a:focus {
+  background-color: #2196f3;
+}
+
+.conteiner-subscription b {
+  display: block;
+  margin-bottom: 20px;
+  text-align: center;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.form-subscription input {
+  display: block;
+  width: 100%;
+  height: 50px;
+  padding: 18px 12px;
+  margin-bottom: 20px;
+  color: #ffffff;
+  background: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.button-subscription {
+  display: block;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 200px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 29px;
+  padding-right: 28px;
+  border: none;
+  background-color: #2196f3;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.button-subscription svg {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
+  fill: #ffffff;
+}
+
+.button-subscription span {
+  color: #ffffff;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
 }
 /*# sourceMappingURL=main.css.map */
