--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,141 +1,143 @@
-// footer {
-//   background-color: #2f303a;
-//   padding-bottom: 18px;
-// }
-// .conteiner-footer {
-//   display: flex;
-//   margin-left: auto;
-//   margin-right: auto;
-//   width: 1170px;
-// }
-// footer ul {
-//   padding: 0;
-//   margin: 0;
-//   list-style-type: none;
-// }
-// footer a {
-//   color: $text-white-color;
-// }
-// .logo-footer {
-//   display: inline-block;
-//   margin-top: 48px;
-//   margin-bottom: 10px;
-//   margin-left: 0;
-//   margin-right: 0;
-//   color: $text-white-color;
-//   font-family: Raleway;
-//   font-weight: 700;
-//   font-size: 22px;
-//   line-height: 1.18;
-//   letter-spacing: 0.03em;
-// }
-// .conteiner-logo li:not(:first-child) {
-//   margin-top: 10px;
-// }
-// .logo-footer-web {
-//   color: $activ-color;
-// }
-// .address-list {
-//   color: $text-white-color;
-//   @include main-font(400, 14px, 1.71);
-//   letter-spacing: 0.03em;
-// }
-// .footer-mail-link {
-//   color: rgba(255, 255, 255, 0.6);
-//   @include main-font(400, 14px, 1.71);
-//   letter-spacing: 0.03em;
-// }
-// .footer-tell-link {
-//   color: rgba(255, 255, 255, 0.6);
-//   @include main-font(400, 14px, 1.71);
-//   letter-spacing: 0.03em;
-// }
-// .conteiner-join {
-//   margin-top: 57px;
-//   margin-left: 69px;
-//   margin-bottom: 56px;
-// }
-// .conteiner-join ul {
-//   display: flex;
-//   margin-top: 21px;
-// }
-// .item-social a {
-//   display: block;
-//   width: 44px;
-//   height: 44px;
-//   border-radius: 50%;
-//   background: rgba(255, 255, 255, 0.1);
-//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-// }
-// .item-social svg {
-//   width: 20px;
-//   height: 20px;
-//   display: block;
-//   fill: $text-white-color;
-//   position: relative;
-//   top: 50%;
-//   left: 50%;
-//   transform: translate(-50%, -50%);
-// }
-// .conteiner-join .item-social:not(:first-child) {
-//   margin-left: 10px;
-// }
-// .item-social a:hover,
-// .item-social a:focus {
-//   background-color: $activ-color;
-// }
-// .text-join {
-//   color: $text-white-color;
-//   @include main-font(bold, 14px, 1.14);
-//   letter-spacing: 0.03em;
-//   text-transform: uppercase;
-// }
+footer {
+  background-color: #2f303a;
+  padding: 60px 15px;
+  a {
+    color: $text-white-color;
+  }
+}
+.logo-footer {
+  display: block;
+  margin-bottom: 20px;
+  text-align: center;
+  color: $text-white-color;
+  font-family: Raleway;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+}
+.logo-footer-web {
+  color: $activ-color;
+}
+.conteiner-logo ul {
+  list-style: none;
+  @include main-font(normal, 15px, 1.71);
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  padding: 0;
+  margin: 0;
+}
+.address-list {
+  font-style: normal;
+  margin-bottom: 8px;
+}
+.footer-mail-link {
+  display: block;
+  color: rgba(255, 255, 255, 0.6);
+  margin-bottom: 8px;
+}
+.footer-tell-link {
+  display: block;
+  color: rgba(255, 255, 255, 0.6);
+}
+.conteiner-join {
+  display: block;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.conteiner-join b {
+  display: block;
+  margin-bottom: 20px;
+  text-align: center;
+  color: $text-white-color;
+  @include main-font(bold, 14px, 1.14);
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+}
+.conteiner-join ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.item-social a {
+  display: block;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.item-social svg {
+  width: 20px;
+  height: 20px;
+  display: block;
+  fill: $text-white-color;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.conteiner-join .item-social:not(:first-child) {
+  margin-left: 10px;
+}
+.item-social a:hover,
+.item-social a:focus {
+  background-color: $activ-color;
+}
 // .conteiner-subscription {
 //   padding-top: 57px;
 //   margin-left: 94px;
 // }
-// .conteiner-subscription b {
-//   display: block;
-//   margin-bottom: 20px;
-//   @include main-font(bold, 14px, 1.14);
-//   letter-spacing: 0.03em;
-//   color: #ffffff;
-//   text-transform: uppercase;
-// }
+.conteiner-subscription b {
+  display: block;
+  margin-bottom: 20px;
+  text-align: center;
+  @include main-font(bold, 14px, 1.14);
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  text-transform: uppercase;
+}
 // .form-subscription {
 //   display: flex;
 // }
-// .form-subscription input {
-//   display: block;
-//   width: 358px;
-//   height: 50px;
-//   padding: 18px 12px;
-//   color: $text-white-color;
-//   background: #2f303a;
-//   border: 1px solid rgba(255, 255, 255, 0.3);
-//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-//   border-radius: 4px;
-// }
-// .button-subscription {
-//   display: inline-flex;
-//   align-items: center;
-//   width: 200px;
-//   height: 50px;
-//   margin-left: 12px;
-//   padding-left: 29px;
-//   padding-right: 28px;
-//   border: none;
-//   background-color: $activ-color;
-//   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-//   border-radius: 4px;
-// }
-// .button-subscription svg {
-//   margin-left: 10px;
-//   width: 24px;
-//   height: 24px;
-//   fill: $text-white-color;
-// }
-// .button-subscription span {
-//   color: $text-white-color;
-//   @include main-font(bold, 16px, 1.87);
-// }
+.form-subscription input {
+  display: block;
+  width: 100%;
+  height: 50px;
+  padding: 18px 12px;
+  margin-bottom: 20px;
+  color: $text-white-color;
+  background: #2f303a;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.button-subscription {
+  display: block;
+  align-items: center;
+  width: 200px;
+  height: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 29px;
+  padding-right: 28px;
+  border: none;
+  background-color: $activ-color;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+.button-subscription svg {
+  margin-left: 10px;
+  width: 24px;
+  height: 24px;
+  fill: $text-white-color;
+}
+.button-subscription span {
+  color: $text-white-color;
+  @include main-font(bold, 16px, 1.87);
+}
