--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,6 +4,9 @@
   left: 0;
   width: 100%;
   height: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 93px;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -12,11 +15,11 @@
   pointer-events: none;
 }
 .modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 528px;
+  position: relative;
+  // top: 93px;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
+  // max-width: 450px;
   padding: 40px;
   background-color: $text-white-color;
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
