--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -14,42 +14,12 @@
   outline-offset: 0;
 }
 
-.studio-link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: #212121;
-  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-activ {
-  position: relative;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: #2196f3;
-}
-
-.portfolio-activ::after {
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  display: block;
-  content: '';
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  background-color: #2196f3;
-}
-
 /*BUTTON*/
 .examples-works {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-top: 93px;
-  padding-bottom: 93px;
+  padding: 60px 15px;
   border-top: 1px solid #ececec;
   margin-left: auto;
   margin-right: auto;
@@ -60,27 +30,22 @@
 }
 
 .conteiner-button {
-  width: 630px;
-  height: 54px;
   margin-left: auto;
   margin-right: auto;
 }
 
 .conteiner-button ul {
-  margin-top: 0;
-  margin-bottom: 0;
+  margin: 0;
   padding: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .conteiner-button h1 {
   margin: 0 auto;
-}
-
-.conteiner-button li:not(:first-child) {
-  margin-left: 8px;
 }
 
 .all,
@@ -90,6 +55,8 @@
 .marketing {
   height: 38px;
   padding: 6px 22px;
+  margin-bottom: 21px;
+  margin-right: 8px;
   border-radius: 4px;
   border: 1px solid #f5f4fa;
   background: #f5f4fa;
@@ -131,16 +98,14 @@
 
 /*PORTFOLIO*/
 .conteiner-examples {
-  margin-top: 50px;
+  margin-top: 19px;
+  padding: 0 15px;
   margin-left: auto;
   margin-right: auto;
-  width: 1170px;
 }
 
 .conteiner-examples img {
   display: block;
-  width: 370px;
-  height: 294px;
 }
 
 .image-cart {
@@ -188,18 +153,11 @@
 }
 
 .conteiner-examples ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin: -15px;
   padding: 0;
+  margin: 0;
 }
 
 .conteiner-examples li {
-  width: 370px;
-  margin: 15px;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
