--- a/sass/components/_portfolio-header.scss
+++ b/sass/components/_portfolio-header.scss
@@ -1,25 +1,25 @@
-.studio-link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: $primary-text-color;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-activ {
-  position: relative;
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-  color: $activ-color;
-  &::after {
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    display: block;
-    content: '';
-    width: 100%;
-    height: 4px;
-    border-radius: 2px;
-    background-color: $activ-color;
-  }
-}
+// .studio-link {
+//   display: block;
+//   padding-top: 32px;
+//   padding-bottom: 32px;
+//   color: $primary-text-color;
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+// }
+// .portfolio-activ {
+//   position: relative;
+//   display: block;
+//   padding-top: 32px;
+//   padding-bottom: 32px;
+//   color: $activ-color;
+//   &::after {
+//     position: absolute;
+//     left: 0;
+//     bottom: 0;
+//     display: block;
+//     content: '';
+//     width: 100%;
+//     height: 4px;
+//     border-radius: 2px;
+//     background-color: $activ-color;
+//   }
+// }
