--- a/css/main.css
+++ b/css/main.css
@@ -18,11 +18,38 @@ a {
   text-decoration: none;
 }
 
+.conteiner-header {
+  position: relative;
+  padding: 10px 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.navigation {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+  border-top: 1px solid #ECECEC;
+  display: none;
+}
+
+.navigation.is-open {
+  display: block;
+}
+
 .logo {
   display: block;
-  padding-left: 15px;
-  padding-top: 16px;
-  padding-bottom: 16px;
   color: #212121;
   font-family: Raleway;
   font-weight: bold;
@@ -32,6 +59,92 @@ a {
 
 .logo-web {
   color: #2196f3;
+}
+
+.menu-button {
+  display: block;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.navigation-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0px;
+  padding: 0px;
+  list-style-type: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.17;
+}
+
+.navigation-link a:hover,
+.navigation-link a:focus {
+  color: #2196f3;
+}
+
+.studio-link-activ {
+  position: relative;
+  display: block;
+  margin-bottom: 50px;
+  color: #2196f3;
+}
+
+.studio-link-activ::after {
+  position: absolute;
+  left: 0;
+  bottom: -8px;
+  display: block;
+  content: '';
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #2196f3;
+}
+
+.portfolio {
+  display: block;
+  margin-bottom: 40px;
+  color: #212121;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts {
+  display: block;
+  margin-bottom: 60px;
+  color: #212121;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-section {
