--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -1,81 +1,101 @@
-// .conteiner-header {
-//   display: flex;
-//   max-width: 1170px;
-//   height: 80px;
-//   margin-left: auto;
-//   margin-right: auto;
-//   align-items: center;
+// header{
 // }
-// .navigation {
-//   display: flex;
-//   align-items: center;
-// }
-a {
-  text-decoration: none;
+.conteiner-header {
+      position: relative;
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.logo{
+.navigation {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: $text-white-color;
+  border-top: 1px solid #ECECEC;
+  display: none;
+  &.is-open {
+    display: block;
+  }
+}
+.logo {
   display: block;
-  padding-left: 15px;
-  padding-top: 16px;
-  padding-bottom: 16px;
   color: $primary-text-color;
   font-family: Raleway;
   font-weight: bold;
   font-size: 24px;
   line-height: 1.17;
 }
-// .logo {
-//   margin-right: 86px;
-// }
 .logo-web {
   color: $activ-color;
 }
-// .navigation-link {
-//   display: flex;
-//   margin: 0px;
-//   padding: 0px;
-//   list-style-type: none;
-//   @include main-font(500, 14px, 1.14);
-//   .item:not(:first-child) {
-//     margin-left: 50px;
-//   }
-//   a:hover,
-//   a:focus {
-//     color: $activ-color;
-//   }
-// }
-// .studio-link-activ {
-//   position: relative;
-//   display: block;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   color: $activ-color;
-//   &::after {
-//     position: absolute;
-//     left: 0;
-//     bottom: 0;
-//     display: block;
-//     content: '';
-//     width: 100%;
-//     height: 4px;
-//     border-radius: 2px;
-//     background-color: $activ-color;
-//   }
-// }
-// .portfolio {
-//   display: block;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   color: $primary-text-color;
-//   transition: $main-transition;
-// }
-// .contacts {
-//   display: block;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   color: $primary-text-color;
-//   transition: $main-transition;
-// }
+.menu-button {
+  display: block;
+  width: 40px;
+  height: 40px;
+  padding: 0;
+  margin: 0;
+  border: none;
+  background-color: transparent;
+}
+.menu-button .icon-cross {
+  display: none;
+}
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+.navigation-link {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0px;
+  padding: 0px;
+  list-style-type: none;
+  @include main-font(500, 18px, 1.17);
+  // .item:not(:first-child) {
+  //   margin-left: 50px;
+  // }
+  a:hover,
+  a:focus {
+    color: $activ-color;
+  }
+}
+.studio-link-activ {
+  position: relative;
+  display: block;
+  margin-bottom: 50px;
+  color: $activ-color;
+  &::after {
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    display: block;
+    content: '';
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: $activ-color;
+  }
+}
+.portfolio {
+  display: block;
+  margin-bottom: 40px;
+  color: $primary-text-color;
+  transition: $main-transition;
+}
+.contacts {
+  display: block;
+  margin-bottom: 60px;
+  color: $primary-text-color;
+  transition: $main-transition;
+}
 // .contacts-list a {
 //   display: block;
 //   display: flex;
