--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -10,3 +10,6 @@ $main-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   font-size: $size;
   line-height: $height;
 }
+a {
+  text-decoration: none;
+}
