--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -18,24 +18,24 @@ a {
   outline-offset: 0;
 }
 
-/*BUTTON*/
 .examples-works {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   padding: 60px 15px;
   border-top: 1px solid #ececec;
+}
+
+.conteiner-examples-works {
   margin-left: auto;
   margin-right: auto;
 }
 
-.examples-works ul {
+@media screen and (min-width: 480px) {
+  .conteiner-examples-works {
+    width: 480px;
+  }
+}
+
+.conteiner-button ul {
   list-style-type: none;
-}
-
-.conteiner-button {
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .conteiner-button ul {
@@ -46,10 +46,6 @@ a {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-}
-
-.conteiner-button h1 {
-  margin: 0 auto;
 }
 
 .all,
@@ -102,8 +98,6 @@ a {
 
 /*PORTFOLIO*/
 .conteiner-examples {
-  margin-top: 19px;
-  padding: 0 15px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -159,6 +153,7 @@ a {
 .conteiner-examples ul {
   padding: 0;
   margin: 0;
+  list-style: none;
 }
 
 .conteiner-examples li {
@@ -166,12 +161,16 @@ a {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.conteiner-examples li:not(:first-child) {
+  margin-top: 30px;
+}
+
 .conteiner-examples li:hover, .conteiner-examples li:focus {
   -webkit-box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
           box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
-.examples-works h2 {
+.conteiner-examples h2 {
   margin: 0;
   margin-bottom: 4px;
   color: #212121;
@@ -183,7 +182,7 @@ a {
   letter-spacing: 0.03em;
 }
 
-.content-cart p {
+.conteiner-examples p {
   margin: 0;
   color: #757575;
   font-family: Roboto;
