--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,5 +1,12 @@
-.client-section {
+// .client-section {
+// }
+.conteiner-client {
   padding: 60px 15px;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
 }
 .client-title {
   text-align: center;
