--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -2,6 +2,9 @@
   padding: 60px 15px;
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
 }
 .conteiner-features ul {
   margin: 0;
