--- a/sass/components/_portfolio-examples.scss
+++ b/sass/components/_portfolio-examples.scss
@@ -1,29 +1,33 @@
-/*BUTTON*/
 .examples-works {
-  align-items: center;
+  // align-items: center;
   padding: 60px 15px;
   border-top: 1px solid #ececec;
+}
+.conteiner-examples-works {
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
 }
-.examples-works ul {
+.conteiner-button ul {
   list-style-type: none;
 }
-.conteiner-button {
-  // width: 630px;
-  // height: 54px;
-  margin-left: auto;
-  margin-right: auto;
-}
+// .conteiner-button {
+//   width: 630px;
+//   height: 54px;
+//   margin-left: auto;
+//   margin-right: auto;
+// }
 .conteiner-button ul {
   margin: 0;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
 }
-.conteiner-button h1 {
-  margin: 0 auto;
-}
+// .conteiner-button h1 {
+//   margin: 0 auto;
+// }
 // .conteiner-button li:not(:first-child) {
 //   margin-left: 8px;
 // }
@@ -69,10 +73,11 @@
 }
 /*PORTFOLIO*/
 .conteiner-examples {
-  margin-top: 19px;
-  padding: 0 15px;
   margin-left: auto;
   margin-right: auto;
+  // @media screen and (min-width: 480px) {
+  //   width: 480px;
+  // }
 }
 .conteiner-examples img {
   display: block;
@@ -118,25 +123,30 @@
   // margin: -15px;
   padding: 0;
   margin: 0;
+  list-style: none;
 }
 .conteiner-examples li {
   // width: 370px;
   // margin: 15px;
+  &:not(:first-child) {
+    margin-top: 30px;
+  }
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   &:hover,
   &:focus {
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
       0px 1px 1px rgba(0, 0, 0, 0.12);
   }
 }
-.examples-works h2 {
+.conteiner-examples h2 {
   margin: 0;
   margin-bottom: 4px;
   color: $primary-text-color;
   @include main-font(700, 18px, 2);
   letter-spacing: 0.03em;
 }
-.content-cart p {
+.conteiner-examples p {
   margin: 0;
   color: $secondary-text-color;
   @include main-font(normal, 16px, 1.87);
