--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,13 +1,20 @@
 .team-section {
   background-color: #f5f4fa;
-  margin: 0;
-    padding-left: 15px;
+}
+.conteiner-team {
+  display: block;
+  padding-left: 15px;
   padding-right: 15px;
   padding-top: 60px;
   padding-bottom: 60px;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
 }
 .team-section ul {
-margin: 0;
+  margin: 0;
   padding: 0;
   list-style-type: none;
 }
@@ -19,19 +26,19 @@ margin: 0;
   letter-spacing: 0.03em;
 }
 .team-item {
-    display: block;
-    text-align: center;
+  display: block;
+  text-align: center;
   background-color: #f5f4fa;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 1px 3px rgba(0, 0, 0, 0.12);
-    margin-top: 30px;
-    padding-bottom: 24px;
+  margin-top: 30px;
+  padding-bottom: 24px;
 }
 .team-item img {
   display: block;
 }
 .team-item ul {
-    display: flex;
+  display: flex;
   padding: 0;
   width: 207px;
   margin-top: 0;
