--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -13,3 +13,6 @@ $main-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 a {
   text-decoration: none;
 }
+// @media screen and (min-width: 480px) {
+//   width: 480px;
+// }
