--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,12 @@ header {
   }
 }
 
+@media screen and (min-width: 768px) {
+  header {
+    width: 768px;
+  }
+}
+
 .conteiner-header {
   position: relative;
   padding: 10px 15px;
@@ -43,6 +49,15 @@ header {
           align-items: center;
 }
 
+@media screen and (min-width: 768px) {
+  .conteiner-header {
+    position: static;
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+  }
+}
+
 .navigation {
   position: absolute;
   top: 100%;
@@ -53,6 +68,20 @@ header {
   background-color: #ffffff;
   border-top: 1px solid #ececec;
   display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: static;
+    top: 0;
+    left: 0;
+    border: none;
+    padding: 0;
+    width: auto;
+  }
 }
 
 .navigation.is-open {
@@ -68,6 +97,12 @@ header {
   line-height: 1.17;
 }
 
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 81px;
+  }
+}
+
 .logo-web {
   color: #2196f3;
 }
@@ -80,6 +115,12 @@ header {
   margin: 0;
   border: none;
   background-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-button {
+    display: none;
+  }
 }
 
 .menu-button .icon-cross {
@@ -118,6 +159,23 @@ header {
   line-height: 1.17;
 }
 
+@media screen and (min-width: 768px) {
+  .navigation-link {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+  }
+  .navigation-link li:not(:first-child) {
+    margin-left: 50px;
+  }
+}
+
 .navigation-link a:hover,
 .navigation-link a:focus {
   color: #2196f3;
@@ -142,6 +200,15 @@ header {
   background-color: #2196f3;
 }
 
+@media screen and (min-width: 768px) {
+  .studio-link-activ {
+    margin: 0;
+  }
+  .studio-link-activ::after {
+    bottom: -24px;
+  }
+}
+
 .portfolio {
   display: block;
   margin-bottom: 40px;
@@ -150,12 +217,95 @@ header {
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media screen and (min-width: 768px) {
+  .portfolio {
+    margin: 0;
+  }
+}
+
 .contacts {
   display: block;
   margin-bottom: 60px;
   color: #212121;
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+@media screen and (min-width: 768px) {
+  .contacts {
+    margin: 0;
+  }
+}
+
+.contacts-list a {
+  display: block;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #757575;
+  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-list a:hover, .contacts-list a:focus {
+  color: #2196f3;
+}
+
+.icon-mail,
+.icon-phone {
+  display: inline-block;
+  fill: currentColor;
+  margin-right: 10px;
+}
+
+.contacts-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list {
+    -webkit-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: start;
+    margin-left: 84px;
+  }
+}
+
+.contacts-list li {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.contacts-list li:not(:last-child) {
+  margin-bottom: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .contacts-list li {
+    margin: 0;
+  }
+  .contacts-list li:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
 
 .hero-section {
