--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -4,6 +4,9 @@ header {
   @media screen and (min-width: 480px) {
     width: 480px;
   }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
 }
 .conteiner-header {
   position: relative;
@@ -11,6 +14,10 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  @media screen and (min-width: 768px) {
+    position: static;
+    justify-content: start;
+  }
 }
 .navigation {
   position: absolute;
@@ -22,6 +29,15 @@ header {
   background-color: $text-white-color;
   border-top: 1px solid #ececec;
   display: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    position: static;
+    top: 0;
+    left: 0;
+    border: none;
+    padding: 0;
+    width: auto;
+  }
   &.is-open {
     display: block;
   }
@@ -33,6 +49,9 @@ header {
   font-weight: bold;
   font-size: 24px;
   line-height: 1.17;
+  @media screen and (min-width: 768px) {
+    margin-right: 81px;
+  }
 }
 .logo-web {
   color: $activ-color;
@@ -45,6 +64,9 @@ header {
   margin: 0;
   border: none;
   background-color: transparent;
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 .menu-button .icon-cross {
   display: none;
@@ -64,9 +86,13 @@ header {
   padding: 0px;
   list-style-type: none;
   @include main-font(500, 18px, 1.17);
-  // .item:not(:first-child) {
-  //   margin-left: 50px;
-  // }
+  @media screen and (min-width: 768px) {
+    flex-direction: row;
+    @include main-font(500, 14px, 1.14);
+    & li:not(:first-child){
+      margin-left: 50px;
+    }
+  }
   a:hover,
   a:focus {
     color: $activ-color;
@@ -88,47 +114,79 @@ header {
     border-radius: 2px;
     background-color: $activ-color;
   }
+  @media screen and (min-width: 768px) {
+    margin: 0;
+      &::after {
+            bottom: -24px;
+      }
+  }
 }
 .portfolio {
   display: block;
   margin-bottom: 40px;
   color: $primary-text-color;
   transition: $main-transition;
+  @media screen and (min-width: 768px) {
+    margin: 0;
+  }
 }
 .contacts {
   display: block;
   margin-bottom: 60px;
   color: $primary-text-color;
   transition: $main-transition;
+  @media screen and (min-width: 768px) {
+    margin: 0;
+  }
 }
-// .contacts-list a {
-//   display: block;
-//   display: flex;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-//   align-items: center;
-//   color: $secondary-text-color;
-//   transition: $main-transition;
-//   &:hover,
-//   &:focus {
-//     color: $activ-color;
-//   }
-// }
+.contacts-list a {
+  display: block;
+  // display: flex;
+  // padding-top: 32px;
+  // padding-bottom: 32px;
+  align-items: center;
+  color: $secondary-text-color;
+  transition: $main-transition;
+  &:hover,
+  &:focus {
+    color: $activ-color;
+  }
+}
 // .contacts-list li:not(:first-child) {
 //   margin-left: 30px;
 // }
-// .icon-mail,
-// .icon-phone {
-//   display: block;
-//   fill: currentColor;
-//   margin-right: 10px;
-// }
-// .contacts-list {
-//   display: flex;
-//   margin: 0px;
-//   margin-left: auto;
-//   padding: 0px;
-//   list-style-type: none;
-//   @include main-font(500, 14px, 1.14);
-//   letter-spacing: 0.02em;
-// }
+.icon-mail,
+.icon-phone {
+  display: inline-block;
+  fill: currentColor;
+  margin-right: 10px;
+}
+.contacts-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  @include main-font(500, 12px, 1.17);
+  letter-spacing: 0.02em;
+    @media screen and (min-width: 768px) {
+      justify-content: start;
+      margin-left: 84px;
+    }
+}
+.contacts-list li {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  &:not(:last-child) {
+    margin-bottom: 16px;
+  }
+      @media screen and (min-width: 768px) {
+        margin: 0;
+          &:not(:last-child) {
+    margin-bottom: 10px;
+  }
+
+      }
+}
