--- a/sass/components/_portfolio-examples.scss
+++ b/sass/components/_portfolio-examples.scss
@@ -6,31 +6,32 @@
 .conteiner-examples-works {
   margin-left: auto;
   margin-right: auto;
+}
+.conteiner-examples {
+  margin-left: auto;
+  margin-right: auto;
   @media screen and (min-width: 480px) {
-    width: 480px;
+    max-width: 480px;
   }
 }
-.conteiner-button ul {
-  list-style-type: none;
+
+.conteiner-button {
+  //   width: 630px;
+  //   height: 54px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
 }
-// .conteiner-button {
-//   width: 630px;
-//   height: 54px;
-//   margin-left: auto;
-//   margin-right: auto;
-// }
 .conteiner-button ul {
   margin: 0;
   padding: 0;
   display: flex;
   flex-wrap: wrap;
+  list-style-type: none;
 }
-// .conteiner-button h1 {
-//   margin: 0 auto;
-// }
-// .conteiner-button li:not(:first-child) {
-//   margin-left: 8px;
-// }
 .all,
 .all-site,
 .app,
@@ -72,22 +73,13 @@
     0px 3px 1px rgba(0, 0, 0, 0.1);
 }
 /*PORTFOLIO*/
-.conteiner-examples {
-  margin-left: auto;
-  margin-right: auto;
-  // @media screen and (min-width: 480px) {
-  //   width: 480px;
-  // }
-}
 .conteiner-examples img {
   display: block;
-  // width: 370px;
-  // height: 294px;
 }
-.image-cart {
-  position: relative;
-  overflow: hidden;
-}
+// .image-cart {
+//   position: relative;
+//   overflow: hidden;
+// }
 .text-overlay {
   position: absolute;
   left: 0;
@@ -118,21 +110,17 @@
   border-right: 1px solid #eeeeee;
 }
 .conteiner-examples ul {
-  // display: flex;
-  // flex-wrap: wrap;
-  // margin: -15px;
   padding: 0;
   margin: 0;
   list-style: none;
 }
 .conteiner-examples li {
   // width: 370px;
-  // margin: 15px;
+  // outline: 1px solid tomato;
   &:not(:first-child) {
     margin-top: 30px;
   }
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
   &:hover,
   &:focus {
     box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06),
