--- a/css/main.css
+++ b/css/main.css
@@ -639,10 +639,35 @@ header {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .conteiner-features {
+    width: 768px;
+  }
+}
+
 .conteiner-features ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+
+@media screen and (min-width: 768px) {
+  .conteiner-features ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .conteiner-features li {
+    -ms-flex-preferred-size: calc(((100%-30px) - 4 * 15px) / 2);
+        flex-basis: calc(((100%-30px) - 4 * 15px) / 2);
+    margin: 15px;
+  }
 }
 
 .conteiner-features svg {
@@ -660,6 +685,12 @@ header {
 
 .features-section li:not(:first-child) {
   margin-top: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  .features-section li:not(:first-child) {
+    margin-top: 15px;
+  }
 }
 
 .features-section h2 {
@@ -687,7 +718,7 @@ header {
   letter-spacing: 0.03em;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1600px) {
   .activity-section {
     display: none;
   }
@@ -713,14 +744,32 @@ header {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .conteiner-team {
+    width: 768px;
+  }
+}
+
 .team-section ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
 
+@media screen and (min-width: 768px) {
+  .team-section ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
 .team-title {
   margin: 0;
+  margin-bottom: 30px;
   color: #212121;
   font-family: Roboto;
   font-style: normal;
@@ -739,6 +788,14 @@ header {
           box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
   margin-top: 30px;
   padding-bottom: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .team-item {
+    -ms-flex-preferred-size: calc(((100%-30px) - 4 * 15px) / 2);
+        flex-basis: calc(((100%-30px) - 4 * 15px) / 2);
+    margin: 15px;
+  }
 }
 
 .team-item img {
@@ -828,6 +885,12 @@ header {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .conteiner-client {
+    width: 768px;
+  }
+}
+
 .client-title {
   text-align: center;
   margin: 0;
@@ -858,13 +921,21 @@ header {
   color: #afb1b8;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .client-item:focus, .client-item:hover {
   border-color: #2196f3;
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .client-item {
+    -ms-flex-preferred-size: calc(((100%-30px) - 6 * 15px) / 3);
+        flex-basis: calc(((100%-30px) - 6 * 15px) / 3);
+    margin: 15px;
+  }
 }
 
 .client-item a {
@@ -898,6 +969,12 @@ footer {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .conteiner-footer {
+    width: 768px;
+  }
+}
+
 .logo-footer {
   display: block;
   margin-bottom: 20px;
@@ -912,6 +989,21 @@ footer {
 
 .logo-footer-web {
   color: #2196f3;
+}
+
+@media screen and (min-width: 768px) {
+  .conteiner-logo-join {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 60px;
+  }
 }
 
 .conteiner-logo ul {
@@ -950,6 +1042,13 @@ footer {
   margin-bottom: 60px;
   margin-left: auto;
   margin-right: auto;
+}
+
+@media screen and (min-width: 768px) {
+  .conteiner-join {
+    display: inline-block;
+    margin: 0;
+  }
 }
 
 .conteiner-join b {
@@ -1035,6 +1134,14 @@ footer {
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+}
+
+@media screen and (min-width: 768px) {
+  .form-subscription input {
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 .button-subscription {
