--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -23,11 +23,6 @@ a {
   border-top: 1px solid #ececec;
 }
 
-.conteiner-examples-works {
-  margin-left: auto;
-  margin-right: auto;
-}
-
 .conteiner-examples {
   margin-left: auto;
   margin-right: auto;
@@ -35,7 +30,13 @@ a {
 
 @media screen and (min-width: 480px) {
   .conteiner-examples {
-    max-width: 480px;
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .conteiner-examples {
+    width: 768px;
   }
 }
 
@@ -47,7 +48,13 @@ a {
 
 @media screen and (min-width: 480px) {
   .conteiner-button {
-    max-width: 480px;
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .conteiner-button {
+    width: 768px;
   }
 }
 
@@ -60,6 +67,14 @@ a {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   list-style-type: none;
+}
+
+@media screen and (min-width: 768px) {
+  .conteiner-button ul {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .all,
@@ -115,6 +130,11 @@ a {
   display: block;
 }
 
+.image-cart {
+  position: relative;
+  overflow: hidden;
+}
+
 .text-overlay {
   position: absolute;
   left: 0;
@@ -160,6 +180,17 @@ a {
   list-style: none;
 }
 
+@media screen and (min-width: 768px) {
+  .conteiner-examples ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -15px;
+  }
+}
+
 .conteiner-examples li {
   -webkit-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -174,6 +205,16 @@ a {
           box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
 }
 
+@media screen and (min-width: 768px) {
+  .conteiner-examples li {
+    width: 354px;
+    margin: 15px;
+  }
+  .conteiner-examples li:not(:first-child) {
+    margin-top: 15px;
+  }
+}
+
 .conteiner-examples h2 {
   margin: 0;
   margin-bottom: 4px;
@@ -184,6 +225,12 @@ a {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 768px) {
+  .conteiner-examples h2 {
+    white-space: nowrap;
+  }
 }
 
 .conteiner-examples p {
