--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -7,6 +7,9 @@
   @media screen and (min-width: 480px) {
     width: 480px;
   }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
 }
 .client-title {
   text-align: center;
@@ -28,11 +31,16 @@
   color: #afb1b8;
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:focus,
   &:hover {
     border-color: $activ-color;
     color: $activ-color;
+  }
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(((100%-30px) - 6 * 15px) / 3);
+    margin: 15px;
   }
 }
 .client-item a {
