--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -8,6 +8,9 @@ footer {
   @media screen and (min-width: 480px) {
     width: 480px;
   }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
 }
 .logo-footer {
   display: block;
@@ -23,6 +26,19 @@ footer {
 .logo-footer-web {
   color: $activ-color;
 }
+.conteiner-logo-join {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-bottom: 60px;
+  }
+}
+// .conteiner-logo {
+//   @media screen and (min-width: 768px) {
+//     display: inline-block;
+//   }
+// }
 .conteiner-logo ul {
   list-style: none;
   @include main-font(normal, 15px, 1.71);
@@ -51,6 +67,10 @@ footer {
   margin-bottom: 60px;
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-width: 768px) {
+    display: inline-block;
+    margin: 0;
+  }
 }
 .conteiner-join b {
   display: block;
@@ -94,8 +114,11 @@ footer {
   background-color: $activ-color;
 }
 // .conteiner-subscription {
-//   padding-top: 57px;
-//   margin-left: 94px;
+//   margin-left: auto;
+//   margin-right: auto;
+//   @media screen and (min-width: 768px) {
+//     width: 768px;
+//   }
 // }
 .conteiner-subscription b {
   display: block;
@@ -120,6 +143,11 @@ footer {
   border: 1px solid rgba(255, 255, 255, 0.3);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+  @media screen and (min-width: 768px) {
+    width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 .button-subscription {
   display: block;
