--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -12,14 +12,23 @@
   @media screen and (min-width: 480px) {
     width: 480px;
   }
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
 }
 .team-section ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
 }
 .team-title {
   margin: 0;
+  margin-bottom: 30px;
   color: $primary-text-color;
   @include main-font(bold, 28px, 1.17);
   text-align: center;
@@ -33,6 +42,10 @@
     0px 1px 3px rgba(0, 0, 0, 0.12);
   margin-top: 30px;
   padding-bottom: 24px;
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(((100%-30px) - 4 * 15px) / 2);
+    margin: 15px;
+  }
 }
 .team-item img {
   display: block;
