--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -12,8 +12,31 @@
   padding-bottom: 118px;
   margin-left: auto;
   margin-right: auto;
+  @media screen and (min-device-pixel-ratio: 2),
+    screen and (min-resolution: 192dpi),
+    screen and (min-resolution: 2dppx) {
+    & {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url(../images/hero-img-480-2x.jpg);
+    }
+  }
+
   @media screen and (min-width: 480px) {
     width: 480px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url(../images/hero-img-480-2x.jpg);
+    }
   }
   @media screen and (min-width: 768px) {
     background-image: linear-gradient(
@@ -24,19 +47,51 @@
       url(../images/hero-img-768-1x.jpg);
     width: 768px;
     background-size: contain;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url(../images/hero-img-768-2x.jpg);
+    }
   }
-}
-@media screen and (min-device-pixel-ratio: 2),
-  screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx) {
-  .hero-section {
+  @media screen and (min-width: 1200px) {
     background-image: linear-gradient(
         to right,
         rgba(47, 48, 58, 0.8),
         rgba(47, 48, 58, 0.8)
       ),
-      url(../images/hero-img-480-2x.jpg);
+      url(../images/hero-img-1200-1x.jpg);
+    background-size: cover;
+    width: 100%;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    @media screen and (min-device-pixel-ratio: 2),
+      screen and (min-resolution: 192dpi),
+      screen and (min-resolution: 2dppx) {
+      background-image: linear-gradient(
+          to right,
+          rgba(47, 48, 58, 0.8),
+          rgba(47, 48, 58, 0.8)
+        ),
+        url(../images/hero-img-1200-2x.jpg);
+    }
   }
+  // @media screen and (min-device-pixel-ratio: 2),
+  //   screen and (min-resolution: 192dpi),
+  //   screen and (min-resolution: 2dppx) {
+  //   & {
+  //     background-image: linear-gradient(
+  //         to right,
+  //         rgba(47, 48, 58, 0.8),
+  //         rgba(47, 48, 58, 0.8)
+  //       ),
+  //       url(../images/hero-img-480-2x.jpg);
+  //   }
+  // }
 }
 
 // .conteiner-hero {
